# automation

./: index.html  package-lock.json  package.json
automation-dashboard/: package-lock.json  package.json
automation-dashboard/src/: App.tsx  api.ts
automation-dashboard/src/components/: workflowbuilder.tsx
automation-mvp/: .gitattributes  .gitignore  docker-compose.yml
automation-mvp/automate_engine/: .env  Cargo.toml
automation-mvp/automate_engine/data/: runs.json  workflows.json
automation-mvp/automate_engine/migrations/: init.sql
automation-mvp/automate_engine/src/: engine.rs  logs.rs  main.rs  store.rs
automation-mvp/automate_engine/src/nodes/: delay_node.rs  http_node.rs  mod.rs  transform_node.rs
src/: api.ts
